fix bug jumping box after hovering

--- a/css/main.scss
+++ b/css/main.scss
@@ -115,12 +115,14 @@ html {
   background-color: $base-bc__gray-100;
   transition: transform 1s ease;
   position: relative;
+ 
 }
 
 .pseudo-hover:hover {
   transform: translateY(-0.35em) scale(1.02);
 }
 
+// bos shadow silky hover
 .pseudo-hover::after {
   content: '';
   position: absolute;
@@ -169,8 +171,13 @@ html {
   border-radius: 50%;
   float: left;
   margin-right: 1.2rem;
+ 
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+}
 .clearfix::after { 
   content: '';
   visibility: hidden;
@@ -218,10 +225,11 @@ html {
 
 .card__description {
   height: 100%;
-  padding-top: 2rem;
+ 
 }
 
 .card__description-heading {
+  padding-top: 1.5rem;
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 1.5rem;
@@ -245,7 +253,7 @@ html {
   font-style: normal;
   font-weight: 500;
   line-height: 1.125rem;
-    padding: 1rem 0 1.4rem 0;
+  padding: 1rem 0 1.4rem 0;
 }
 
 .card-1 .card__description-blockquote{
